--- a/trigonometry1.html
+++ b/trigonometry1.html
@@ -200,15 +200,15 @@
         </div>
         <div style="border: 2px solid #ccc;border-radius: 10px;background: #F2F2F2;">
           <div class="math-box">
-            <div>c² = 3² + 4²</div>
-            <div>c² = 9 + 16</div>
-            <div>c² = 25</div>
-            <div>c = 5</div>
+            <div>c² = 6² + 8²</div>
+            <div>c² = 36 + 64</div>
+            <div>c² = 100</div>
+            <div>c = 10</div>
           </div>
         </div>
         <div class="fraction-container" style="margin-left: 20px;">
           <span>Hypotenuse length =</span>
-          <div class="answer-box">5 units</div>
+          <div class="answer-box">10 meters</div>
         </div>
       </div>
     </div>
@@ -225,9 +225,9 @@
         <div class="label point-a">A</div>
         <div class="label point-b">B</div>
         <div class="label point-c">C</div>
-        <div class="dimension ab-label">3 units</div>
-        <div class="dimension bc-label">4 units</div>
-        <div class="dimension ac-label">5 units</div>
+        <div class="dimension ab-label">6 m</div>
+        <div class="dimension bc-label">8 m</div>
+        <div class="dimension ac-label">10 m</div>
       </div>
       <div class="formula-table" style="border-radius: 10px;">
         <div>Pythagorean Theorem:</div>
