--- a/trigonometry2.html
+++ b/trigonometry2.html
@@ -200,16 +200,16 @@
         </div>
         <div style="border: 2px solid #ccc;border-radius: 10px;background: #F2F2F2;">
           <div class="math-box">
-            <div>13² = b² + 5²</div>
-            <div>169 = b² + 25</div>
-            <div>b² = 169 - 25</div>
-            <div>b² = 144</div>
-            <div>b = 12</div>
+            <div>10² = b² + 6²</div>
+            <div>100 = b² + 36</div>
+            <div>b² = 100 - 36</div>
+            <div>b² = 64</div>
+            <div>b = 8</div>
           </div>
         </div>
         <div class="fraction-container" style="margin-left: 20px;">
           <span>Other leg length =</span>
-          <div class="answer-box">12 units</div>
+          <div class="answer-box">8 meters</div>
         </div>
       </div>
     </div>
@@ -226,9 +226,9 @@
         <div class="label point-a">A</div>
         <div class="label point-b">B</div>
         <div class="label point-c">C</div>
-        <div class="dimension ab-label">12 units</div>
-        <div class="dimension bc-label">5 units</div>
-        <div class="dimension ac-label">13 units</div>
+        <div class="dimension ab-label">8 m</div>
+        <div class="dimension bc-label">6 m</div>
+        <div class="dimension ac-label">10 m</div>
       </div>
       <div class="formula-table" style="border-radius: 10px;">
         <div>Pythagorean Theorem:</div>
